# saki-al

./: .claudeignore  .clauderc  .dockerignore  .env.docker  .env.local  .gitignore  API.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  MODEL_RUNTIME_DESIGN.md  PROJECT_OVERVIEW_PLAN.md  PROMPT.txt  RBAC_DESIGN.md  RBAC_系统解析.md  README.md  RUNTIME_CUTOVER_RUNBOOK.md  RUNTIME_PERF_REPORT.md  configure-docker-mirror.sh  deploy.sh  docker-compose.yml  env.example  package-lock.json  三层架构重构文档(AI 非标准版有后续修改).md  重构总结文档.md  问题与建议清单.md
saki-api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
saki-api/alembic/: env.py  script.py.mako
saki-api/alembic/versions/: 0eeafa563b95_init_schema.py  150dc0b99057_rename_dispatch_outbox_to_task_dispatch_.py  1c2d6f9de7b1_add_dataset_is_public.py  1c3a6d7e9f20_label_sort_order_constraints.py  1f90f2d6a6a1_add_import_upload_session.py  20260207_0001_runtime_loop_closure.py  20260207_0002_model_parent_lineage.py  2e9d2f6dfd6d_drop_unused_runtime_loop_columns.py  3571be625207_init_schema.py  4b2b8a0ce9b1_add_file_sha256_for_import_upload_reuse.py  4b3f2d1f7c9a_prediction_task_hardcut.py  4d7c24d18ff4_init_schema.py  51cf38b5a3bc_drop_predict_from_steptype.py  5d6f7a8b9c10_add_task_depends_on_task_ids.py  7d2f1a9c4b6e_enforce_step_task_not_null.py  7d2f4a1b9c3e_add_task_result_ready_at.py  8f63c92e3b1e_drop_loop_experiment_group_id.py  9a1f2d7c4b6e_runtime_execution_identity_and_pause.py  9f4d7b2c6a1e_rename_prediction_set_id_columns.py  a00e4ff62324_fix_timezone_aware_datetimes.py  a8b7c6d5e4f3_model_publish_metadata_hardcut.py  a9d4e2f7b1c3_round_confirm_and_next_round_stage.py  b75d3661522b_rename_runtime_executor_current_step_id_.py  b7f3a7d5c9c1_al_snapshot_stage_refactor.py  bb2d8f1a4c7e_loop_lifecycle_hard_cut.py  c1d5e8a2f4b7_drop_prediction_source_columns.py  c3d5e7f9a1b2_runtime_unified_semantics_hardcut_v3.py  c4e8a7f1d2b3_runtime_release_distribution_v1.py  c6f0d1e2f3a4_switch_model_source_step_to_task.py  c91c6d3e4f2b_round_attempt_retryable_stage.py  d6f0a8a1c2bf_fix_runtime_event_ts_seconds.py  e1f9a6b3c4d2_drop_loop_stage_cache_columns.py  e5a1c9f2b4d3_add_confirmed_model_annotation_source.py  edef87f62bca_init_schema.py  f2b4c8d1e7a9_round_selection_override_and_round_state_cleanup.py  f7c1a2d9b4e6_prediction_set_project_task_upgrade.py  fbb9e3731c2d_init_schema.py
saki-api/annotation_systems/: __init__.py  base.py  progress.py  registry.py
saki-api/annotation_systems/handlers/: __init__.py  classic.py
saki-api/annotation_systems/satellite_fedo/: handler.py  lookup.py  physics.py  visualizer.py
saki-api/api/: deps.py
saki-api/api/api_v1/: api.py
saki-api/app/api/: deps.py
saki-api/app/core/: config.py  security.py
saki-api/app/db/: session.py
saki-api/app/models/: __init__.py  annotation.py  base.py  dataset.py  enums.py  model_version.py  project.py  sample.py  system_config.py  user.py
saki-api/core/: security.py
saki-api/db/: session.py
saki-api/models/: __init__.py  annotation.py  base.py  dataset.py  enums.py  model_version.py  project.py  sample.py  system_config.py  user.py
saki-api/specialized/: __init__.py
saki-api/specialized/satellite_fedo/: __init__.py  parser.py  physics.py  processor.py  visualizer.py
saki-api/src/saki_api/: main.py
saki-api/tests/architecture/: test_import_rules.py
saki-api/tests/runtime/: test_al_loop_visibility_repository.py  test_annotation_policy.py  test_asset_orphan_refs.py  test_commit_sample_state.py  test_dataset_processing_asset_meta.py  test_datetime_timezone_schema.py  test_dispatcher.py  test_draft_commit_model_guard.py  test_fedo_config.py  test_fedo_dual_view_geometry.py  test_import_format_profile_api.py  test_import_service_utils.py  test_import_upload_reuse.py  test_label_order_service.py  test_logging_runtime_events.py  test_loop_api_contract.py  test_loop_mode_domain.py  test_loop_orchestrator.py  test_model_registry_task_artifact_source.py  test_permission_covers.py  test_prediction_apply_pipeline.py  test_prediction_set_apply_pipeline.py  test_project_fork.py  (+25 more)
saki-executor/: .env.example  .gitignore  Dockerfile  EXECUTOR_DESIGN.md  Makefile  README.md  pyproject.toml
saki-executor/tests/: runtime_data_test_helper.py  test_agent_client.py  test_asset_cache.py  test_command_server.py  test_commands.py  test_core_config.py  test_cpu_provider.py  test_cuda_nvml_provider.py  test_external_plugin_descriptor.py  test_hardware_probe.py  test_host_capability_cache.py  test_ir_dataset_builder.py  test_job_manager_artifacts.py  test_job_manager_modes.py  test_job_manager_pipeline_contract.py  test_log_normalizer.py  test_pipeline_stage_service.py  test_plugin_ipc_protocol.py  test_plugin_worker_client.py  test_plugin_worker_lifecycle.py  test_plugin_worker_policy.py  test_plugin_worker_stream_log_loop.py  test_prepared_data_cache.py  test_runtime_codec.py  test_sampling_service.py  test_step_event_emitter.py  test_strategies.py  test_training_data_service.py  test_uv_profile_installer_cuda_toolchain_align.py  test_uv_profile_installer_mmcv_repair.py  test_workspace.py
saki-kernel-sdk/: README.md  pyproject.toml
saki-mapping-engine/: .gitignore  pyproject.toml
saki-mapping-engine/tests/: test_fedo_mapper.py
saki-plugin-sdk/: PLUGIN_CONFIG_GUIDE.md  README.md  pyproject.toml  test_plugin_config_smoke.py
saki-plugin-sdk/tests/: test_aug_iou.py  test_augmentations.py  test_builtin_strategies.py  test_config_multi_select.py  test_executor_plugin_v2.py  test_ipc_protocol_v2.py  test_metric_contract.py  test_prediction_types.py  test_runtime_context.py  test_runtime_utils.py  test_worker_metric_contract.py  test_worker_runtime.py  test_workspace_protocol.py
saki-plugins/saki-plugin-demo-det/: README.md  plugin.yml  pyproject.toml
saki-plugins/saki-plugin-oriented-rcnn/: IMPLEMENTATION_PLAN.zh-CN.md  README.md  plugin.yml  pyproject.toml
saki-plugins/saki-plugin-yolo-det/: README.md  plugin.yml  pyproject.toml
saki-runtime/: README.md  pyproject.toml
saki-runtime/tests/: test_e2e.py
(+1912 files in other folders)
