[project]
name = "saki-api"
version = "0.1.0"
description = "Saki Active Learning API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlmodel>=0.0.8",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "numpy>=2.4.1",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "matplotlib>=3.9.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "minio>=7.2.20",
    "psycopg[binary,pool]>=3.2.13",
    "aiosqlite>=0.17.0",
    "greenlet>=3.2.4",
    "pandas-stubs>=2.2.2.240807",
    "redis>=7.0.0",
    "grpcio>=1.78.0",
    "protobuf>=6.31.1,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saki_api"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "grpcio-tools==1.78.*",
]
