[project]
name = "saki-executor"
version = "0.1.0"
description = "GPU runtime executor for Saki active learning platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.78.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "pyzmq>=26.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "protobuf>=6.31.1,<7",
    "saki-ir",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.7",
    "grpcio-tools==1.78.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saki_executor"]

[tool.uv.sources]
saki-ir = { path = "../shared/saki-ir/python", editable = true }
