[project]
name = "saki-mapping-engine"
version = "0.1.0"
description = "Local mapping sidecar for Saki controlplane"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "opencv-python-headless>=4.10.0.84",
    "saki-plugin-sdk",
    "saki-ir",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saki_mapping_engine"]

[tool.uv.sources]
saki-plugin-sdk = { path = "../saki-plugin-sdk", editable = true }
saki-ir = { path = "../shared/saki-ir/python", editable = true }
