[project]
name = "saki-runtime"
version = "0.1.0"
description = "Model Runtime service for Saki Active Learning Framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.6",
    "portalocker>=2.7.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saki_runtime"]
