[project]
name = "saki-plugin-demo-det"
version = "3.0.0"
description = "Demo detection plugin for Saki (mock training & scoring)"
requires-python = ">=3.11"
dependencies = [
    "saki-plugin-sdk",
    "saki-ir",
]

[project.optional-dependencies]
profile-cpu = []
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saki_plugin_demo_det"]

[tool.uv.sources]
saki-ir = { path = "../../shared/saki-ir/python", editable = true }
saki-plugin-sdk = { path = "../../saki-plugin-sdk", editable = true }
