[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saki-plugin-oriented-rcnn"
version = "1.0.0"
description = "Oriented R-CNN plugin for Saki executor"
requires-python = ">=3.11"
dependencies = [
    "saki-plugin-sdk",
    "saki-ir",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
profile-cpu = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "onedl-mmengine>=0.10.7",
    "onedl-mmcv>=2.1.0",
    "onedl-mmdetection>=3.4.0",
    "onedl-mmrotate>=1.1.0",
    "shapely>=2.0.0",
]
profile-cuda = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "onedl-mmengine>=0.10.7",
    "onedl-mmcv>=2.1.0",
    "onedl-mmdetection>=3.4.0",
    "onedl-mmrotate>=1.1.0",
    "shapely>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saki_plugin_oriented_rcnn"]

[tool.uv.sources]
saki-plugin-sdk = { path = "../../saki-plugin-sdk", editable = true }
saki-ir = { path = "../../shared/saki-ir/python", editable = true }
