[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saki-plugin-yolo-det"
version = "3.0.0"
description = "YOLO Detection (OBB) plugin for Saki executor"
requires-python = ">=3.11"
dependencies = [
    "saki-plugin-sdk",
    "saki-ir",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
profile-cpu = [
    "ultralytics>=8.3.0",
    "torch>=2.2.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "shapely>=2.0.0",
]
profile-cuda = [
    "ultralytics>=8.3.0",
    "torch>=2.2.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "shapely>=2.0.0",
]
profile-mps = [
    "ultralytics>=8.3.0",
    "torch>=2.2.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "shapely>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/saki_plugin_yolo_det"]

[tool.uv.sources]
saki-plugin-sdk = { path = "../../saki-plugin-sdk", editable = true }
saki-ir = { path = "../../shared/saki-ir/python", editable = true }
