[project]
name = "obb-benchmark-mmrotate-env"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
  "torch==2.0.0",
  "torchvision==0.15.1",
  "mmcv-full==1.7.2",
  "mmdet==2.28.2",
  "mmrotate==0.3.4",
  "numpy<2",
  "pyyaml>=6.0",
  "setuptools<81",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
mmcv-full = { url = "https://download.openmmlab.com/mmcv/dist/cu118/torch2.0.0/mmcv_full-1.7.2-cp310-cp310-manylinux1_x86_64.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obb_benchmark_mmrotate_env"]
