[project]
name = "obb-benchmark-yolo-env"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "ultralytics==8.4.14",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obb_benchmark_yolo_env"]
